# echo

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  bounded_queue.h  irc_client.cpp  irc_client.h  irc_socket.cpp  irc_socket.h  kappa.py  logger.cpp  logger.h  main.cpp  makefile  message.h  semaphore.cpp  semaphore.h  watcher.cpp  watcher.h
echo/: echo.sln  echo.vcxproj  echo.vcxproj.filters
include/echo/: bounded_queue.h  irc_client.h  irc_socket.h  logger.h  settings.h  watcher.h  watcher_client.h  whisper_client.h
src/: irc_client.cpp  irc_socket.cpp  logger.cpp  main.cpp  semaphore.cpp  settings.cpp  watcher.cpp  watcher_client.cpp  whisper_client.cpp
tests/: lcss_test.cpp  ld_test.cpp
